...
            var text = correctAnswers == self.questionsAmount ?
            "Поздравляем, у вас 10 из 10!\n" :
            "Ваш результат: \(correctAnswers)/\(questionsAmount)\n"
            text.append(statisticService?.statistics ?? "")
            
            let viewModel = AlertModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз",
                completion:  {[weak self] _ in
                    self?.restartGame()
                })
            
...
